--- a/project.config
+++ b/project.config
@@ -1,6 +1,5 @@
 [project]
 	description = MediaWiki extension CreateRedirect
-	state = active
 [access]
 	inheritFrom = mediawiki/extensions
 [receive]
@@ -9,3 +8,5 @@
 	mergeContent = true
 [access "refs/*"]
 	owner = group extension-CreateRedirect
+[allowSuperproject "mediawiki/extensions"]
+	matching = refs/heads/master:refs/heads/master
