--- a/project.config
+++ b/project.config
@@ -9,4 +9,4 @@
 [access "refs/*"]
 	owner = group extension-CreateRedirect
 [allowSuperproject "mediawiki/extensions"]
-	matching = refs/heads/master:refs/heads/master
+	matching = refs/heads/REL1_23:refs/heads/REL1_23
