--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,9 @@
 	"globals": {
 		"mw": false,
 		"OO": false
+	},
+	"rules": {
+		"no-jquery/no-event-shorthand": "off",
+		"no-jquery/no-global-selector": "off"
 	}
 }
