--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
 		"mediawiki/mediawiki-codesniffer": "39.0.0",
 		"mediawiki/minus-x": "1.1.1",
 		"php-parallel-lint/php-console-highlighter": "1.0.0",
-		"php-parallel-lint/php-parallel-lint": "1.3.2"
+		"php-parallel-lint/php-parallel-lint": "1.3.2",
+		"mediawiki/mediawiki-phan-config": "0.12.0"
 	},
 	"scripts": {
 		"test": [
