--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "39.0.0",
+		"mediawiki/mediawiki-phan-config": "0.12.0",
 		"mediawiki/minus-x": "1.1.1",
 		"php-parallel-lint/php-console-highlighter": "1.0.0",
-		"php-parallel-lint/php-parallel-lint": "1.3.2",
-		"mediawiki/mediawiki-phan-config": "0.12.0"
+		"php-parallel-lint/php-parallel-lint": "1.3.2"
 	},
 	"scripts": {
 		"test": [
@@ -16,6 +16,7 @@
 			"minus-x fix .",
 			"phpcbf"
 		],
-		"phpcs": "phpcs -sp --cache"
+		"phpcs": "phpcs -sp --cache",
+		"phan": "phan -d . --long-progress-bar"
 	}
 }
