--- a/project.config
+++ b/project.config
@@ -1,11 +1,10 @@
 [project]
-	description = MediaWiki extension CreateRedirect
 [access]
 	inheritFrom = mediawiki/extensions
 [receive]
 	requireChangeId = true
 [submit]
-	mergeContent = true
+	action = inherit
 [access "refs/*"]
 	owner = group extension-CreateRedirect
 
